@@ -9,8 +9,18 @@ import java.util.function.Predicate;
 
 public class Search {
     public static void main(String[] args) throws IOException {
-        Path start = Paths.get(".");
-        search(start, p -> p.toFile().getName().endsWith(".js")).forEach(System.out::println);
+
+        if (args.length == 0) {
+            throw new IllegalArgumentException("Root folder is null. Usage  ROOT_FOLDER.");
+        }
+        if (!isValid(Path.of(args[0]), args[1])) {
+            throw new IllegalArgumentException("Enter correct arguments");
+        }
+        search(Path.of(args[0]), p -> p.toFile().getName().endsWith(args[1])).forEach(System.out::println);
+    }
+
+    private static boolean isValid(Path path, String format) {
+        return path.toFile().exists() && format.startsWith(".");
     }
 
     public static List<Path> search(Path root, Predicate<Path> condition) throws IOException {
